[FEAT/KAN-253] 사례 정보 DynamoDB에 저장